# Free-macos

./: LICENSE  README.md  pyproject.toml
free_macos/: cli.py  core.py  ignore_input.py  progress.py  utils.py
